; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_apply.c_test_stash_apply__fails_with_uncommitted_changes_in_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_apply.c_test_stash_apply__fails_with_uncommitted_changes_in_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"stash/who\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"nothing\0A\00", align 1
@repo_index = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"who\00", align 1
@repo = common dso_local global i32 0, align 4
@GIT_EUNCOMMITTED = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"what\00", align 1
@GIT_STATUS_CURRENT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [4 x i8] c"how\00", align 1
@GIT_STATUS_INDEX_MODIFIED = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"when\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [4 x i8] c"why\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_apply__fails_with_uncommitted_changes_in_index() #0 {
  %1 = call i32 @cl_git_rewritefile(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %2 = load i32, i32* @repo_index, align 4
  %3 = call i32 @git_index_add_bypath(i32 %2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @repo_index, align 4
  %6 = call i32 @git_index_write(i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @repo, align 4
  %9 = call i32 @git_stash_apply(i32 %8, i32 0, i32* null)
  %10 = load i32, i32* @GIT_EUNCOMMITTED, align 4
  %11 = call i32 @cl_git_fail_with(i32 %9, i32 %10)
  %12 = load i32, i32* @repo_index, align 4
  %13 = call i32 @git_index_has_conflicts(i32 %12)
  %14 = call i32 @cl_assert_equal_i(i32 %13, i32 0)
  %15 = load i32, i32* @repo, align 4
  %16 = load i32, i32* @GIT_STATUS_CURRENT, align 4
  %17 = call i32 @assert_status(i32 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @repo, align 4
  %19 = load i32, i32* @GIT_STATUS_CURRENT, align 4
  %20 = call i32 @assert_status(i32 %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* @repo, align 4
  %22 = load i32, i32* @GIT_STATUS_INDEX_MODIFIED, align 4
  %23 = call i32 @assert_status(i32 %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* @repo, align 4
  %25 = load i32, i32* @GIT_ENOTFOUND, align 4
  %26 = call i32 @assert_status(i32 %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* @repo, align 4
  %28 = load i32, i32* @GIT_ENOTFOUND, align 4
  %29 = call i32 @assert_status(i32 %27, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i32 %28)
  ret void
}

declare dso_local i32 @cl_git_rewritefile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_add_bypath(i32, i8*) #1

declare dso_local i32 @git_index_write(i32) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_stash_apply(i32, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_index_has_conflicts(i32) #1

declare dso_local i32 @assert_status(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
